fix/db-connection

--- a/PartyWebApp/appsettings.json
+++ b/PartyWebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PartyWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=PartyWebAppContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
