--- a/PartyWebApp/PartyWebApp.csproj
+++ b/PartyWebApp/PartyWebApp.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="SpotifyAPI.Web" Version="6.1.0" />
   </ItemGroup>
 
 
